--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,12 @@
-body,
-html {
+body {
 	width: 100%;
 	height: 100%;
 	background: url(goodenough.jpg) no-repeat center center fixed;
 	background size: cover;
 	background-color: black;
 	color: white;
+}
+
+.welcome {
+	text-align: center;
+}
