--- a/styles2.css
+++ b/styles2.css
@@ -1,7 +1,22 @@
-body,
-html {
-	width: 100%;
-	height: 100%;
+body {
 	background size: cover;
 	background-color: black;
 	color: white;
+	align-content: center;
+}
+
+.top {
+	text-align: center;
+	margin-top: 50px;
+}
+
+.carousel-inner {
+	align-content: center;
+}
+
+
+img {
+	height: 600px;
+	width: 600px;
+	object-fit: contain;
+}
